# CMakeCook

./: .gitignore
chapter-01/recipe-1.1/: CMakeLists.txt  Note.md  hello_world.cpp
chapter-01/recipe-1.10/: CMakeLists.txt  Note.md  compute_areas.cpp  geometry_circle.cpp  geometry_circle.hpp  geometry_polygon.cpp  geometry_polygon.hpp
chapter-01/recipe-1.3/: CMakeLists.txt  Message.hpp  Note.md
chapter-01/recipe-1.4/: CMakeLists.txt  Message.cpp
chapter-01/recipe-1.5/: CMakeLists.txt  Note.md  hello_world.cpp
chapter-01/recipe-1.6/: CMakeLists.txt
chapter-01/recipe-1.7/: CMakeLists.txt
chapter-01/recipe-1.8/: CMakeLists.txt  compute_areas.cpp  computer_area.cpp
chapter-01/recipe-1.9/: Animal.cpp  Animal.hpp  CMakeLists.txt  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Factory.hpp  animal_farm.cpp
chapter-02/recipe-01/: CMakeLists.txt
chapter-02/recipe-02/: CMakeLists.txt  Note.md  hello_world.cpp
chapter-02/recipe-03/: CMakeLists.txt  hello_world.cpp
chapter-02/recipe-04/: CMakeLists.txt  arch_dependent.cpp
chapter-02/recipe-05/: CMakeLists.txt  config.h.in  processor_info.cpp
chapter-03/recipe-01/: CMakeLists.txt
chapter-03/recipe-02/: CMakeLists.txt  hello_embedded_python.c
chapter-03/recipe-03/: CMakeLists.txt  Py3_pure_embedding.cpp  use_numpy.py
chapter-03/recipe-05/: CMakeLists.txt  example.cpp
chapter-03/recipe-06/: CMakeLists.txt  hello_mpi.cpp
chapter-03/recipe-08/: CMakeLists.txt  path_info.cpp
chapter-04/recipe-01/: CMakeLists.txt  sum_integers.cpp  test.cpp  test.py
chapter-04/recipe-02/: CMakeLists.txt  main.cpp  test.cpp
chapter-04/recipe-04/: CMakeLists.txt  main.cpp  sum_integers.hpp  test.cpp
chapter-04/recipe-06/: CMakeLists.txt
chapter-04/recipe-07/: CMakeLists.txt
chapter-04/recipe-08/: CMakeLists.txt
chapter-04/recipe-08/test/: c.py  g.py  h.py  i.py  j.py
chapter-04/recipe-09/: CMakeLists.txt
chapter-04/recipe-09/test/: benchmark-a.py  feature-b.py
chapter-04/recipe-10/: CMakeLists.txt
chapter-04/recipe-10/test/: cleanup.py  features-a.py  features-b.py  setup.py
chapter-05/recipe-02/: CMakeLists.txt
chapter-05/recipe-07/: CMakeLists.txt  asan_example.cpp
chapter-05/recipe-08/: CMakeLists.txt  use_uuid.cpp
chapter-05/recipe-09/: CMakeLists.txt  example.cpp
chapter-05/recpie-06/: CMakeLists.txt  taskloop.cpp
chapter-06/recipe-01/: CMakeLists.txt  example.f90
chapter-06/recipe-02/: CMakeLists.txt  configurator.py
chapter-06/recipe-03/: CMakeLists.txt  example.cpp  generate.py
chapter-06/recipe-04/: CMakeLists.txt  example.c  version.h.in
chapter-06/recipe-05/: CMakeLists.txt  example.cpp  version.hpp.in
chapter-06/recipe-06/: CMakeLists.txt  example.cpp
chapter-06/recipe-07/: CMakeLists.txt  example.cpp  git_hash.cmake
